--- a/activos_comunitarios_app/templates/base.html
+++ b/activos_comunitarios_app/templates/base.html
@@ -57,13 +57,16 @@ tailwind.config = {
 
 <body class="bg-background-light dark:bg-background-dark text-[#0d141b] dark:text-slate-200 transition-colors duration-200">
 
-<div class="flex h-screen overflow-hidden">
+<div class="flex min-h-screen">
 
     {% include "partials/sidebar.html" %}
 
-    <main class="flex-1 overflow-y-auto">
+    <main class="flex-1 flex flex-col">
         {% include "partials/navbar.html" %}
-        {% block content %}{% endblock %}
+
+        {% block content %}
+        {% endblock %}
+
         {% include "partials/footer.html" %}
     </main>
 
