--- a/activos_comunitarios_app/templates/partials/sidebar.html
+++ b/activos_comunitarios_app/templates/partials/sidebar.html
@@ -1,5 +1,7 @@
-<aside
-    class="w-72 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col h-full shrink-0">
+<div id="sidebar-overlay" class="fixed inset-0 bg-black/50 z-40 lg:hidden hidden"
+    onclick="document.getElementById('sidebar').classList.add('-translate-x-full')"></div>
+<aside id="sidebar"
+    class="fixed inset-y-0 left-0 z-50 w-72 border-r border-slate-200 dark:border-slate-800 bg-white dark:bg-slate-900 flex flex-col h-full transform -translate-x-full lg:translate-x-0 lg:static transition-transform duration-300 ease-in-out shrink-0">
     <div class="p-6 border-b border-slate-200 dark:border-slate-800 flex items-center gap-3">
         <div class="size-9 bg-primary rounded-lg flex items-center justify-center text-white">
             <span class="material-symbols-outlined text-2xl">health_and_safety</span>
