--- a/activos_comunitarios_app/templates/base.html
+++ b/activos_comunitarios_app/templates/base.html
@@ -57,11 +57,11 @@ tailwind.config = {
 
 <body class="bg-background-light dark:bg-background-dark text-[#0d141b] dark:text-slate-200 transition-colors duration-200">
 
-<div class="flex min-h-screen">
+<div class="min-h-screen">
 
     {% include "partials/sidebar.html" %}
 
-    <main class="flex-1 flex flex-col">
+    <main class="lg:ml-72 min-h-screen flex flex-col">
         {% include "partials/navbar.html" %}
 
         {% block content %}
