--- a/activos_comunitarios_app/templates/comunity_assets/add_assets.html
+++ b/activos_comunitarios_app/templates/comunity_assets/add_assets.html
@@ -256,13 +256,7 @@
                 Ubicación del Activo
             </h3>
 
-            <div class="relative mb-6">
-                <span
-                    class="material-symbols-outlined absolute left-4 top-1/2 -translate-y-1/2 text-[#4c739a]">search</span>
-                <input id="address-search"
-                    class="w-full rounded-lg pl-12 pr-4 border border-[#cfdbe7] dark:border-slate-700 bg-slate-50 dark:bg-slate-800 h-14 text-base"
-                    placeholder="Buscar dirección para posicionar el marcador..." />
-            </div>
+            aca podria ir una explicacion de seleccionar la wea en el mapa
 
             <div class="relative">
                 <div id="map" class="w-full h-[400px] rounded-lg border border-[#cfdbe7] z-0"></div>
