--- a/activos_comunitarios_app/templates/partials/sidebar.html
+++ b/activos_comunitarios_app/templates/partials/sidebar.html
@@ -108,6 +108,13 @@
                     <p class="text-sm font-medium">Informacion Personal</p>
                 </a>
 
+                <a href="{% url 'create_user' %}" class="flex items-center gap-3 px-4 py-2.5 rounded-lg transition-colors
+               {% if current == 'create_user' %} active-nav-item
+               {% else %} hover:bg-slate-100 dark:hover:bg-slate-800 text-[#4c739a] dark:text-slate-400 {% endif %}">
+                    <span class="material-symbols-outlined">person_add</span>
+                    <p class="text-sm font-medium">Crear Usuario</p>
+                </a>
+
                 <a href="" class="flex items-center gap-3 px-4 py-2.5 rounded-lg transition-colors
                {% if current == 'contributions' %} active-nav-item
                {% else %} hover:bg-slate-100 dark:hover:bg-slate-800 text-[#4c739a] dark:text-slate-400 {% endif %}">
